[Feature] Invoice and Transaction Table Updates
- Implemented Invoice and Transaction Table with pre generated Data
- Added route for single Transaction view
- UI updates: Table, Search Field, Download Button
- Fixed dynamic breadcrumb broken after single Transaction view addition

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    @apply h-full;
+}
+
 #dropdown {
     @apply pl-10;
 }
